fix small bug on small screen

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     margin: 0;
     padding: 1px;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     text-align: center;
     background: rgba(214,129,219,1);
     background: -moz-linear-gradient(-45deg, rgba(214,129,219,1) 0%, rgba(166,129,219,1) 33%, rgba(73,165,191,1) 66%, rgba(166,223,219,1) 100%);
